# Pixelle-Video

./: .dockerignore  .env.example  .gitignore  404.html  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.legacy  Dockerfile.streamlit  Dockerfile.web  Dockerfile.webhook  config.example.yaml  docker-compose.prod.yml  docker-compose.yml  index.html  nginx.conf  pyproject.toml  requirements-api-ai.txt  requirements-api-media.txt  requirements-api-server.txt  requirements-api.txt  requirements-streamlit-core.txt  requirements-streamlit-data.txt  requirements-streamlit-legacy.txt  requirements-streamlit-viz.txt  requirements-streamlit.txt  sitemap.xml
FAQ/: index.html
FAQ_CN/: index.html
api/: app.py  config.py  dependencies.py  desktop_security.py
desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: ip_broadcast_workflow_optimization_plan.md  tauri_react_desktop_app_plan.md
faq/: index.html
gallery/: index.html
ip_broadcast_workflow_optimization_plan/: index.html
migrations/: template-layout-uxd-gate-2026-07-18.json
pixelle_video/: __init__.py  llm_presets.py  service.py  tts_voices.py
schemas/: deferred-upload-finalize.schema.json  deferred-upload-response.schema.json  library-page-facets.schema.json  template-layout-contract-v2.schema.json
scripts/: __init__.py  acr-webhook-server.py  acr_webhook_lib.py  asset_center_ux0_baseline_desktop.py  asset_center_uxb_desktop_gate.py  asset_center_uxc_desktop_e2e.py  assets_ux4_performance.py  (+25 more)
(+1104 files in other folders)
